<resources>
    <string name="app_name">B2BMarket</string>
    <string name="action_settings">Settings</string>
    <string name="singup"> <u>Not a user? Sign up.</u> </string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main2">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <string name="login">Login</string>
    <string name="EmailAddress">Email Address</string>
    <string name="Password">Password</string>
    <string name="Submit">Submit</string>

    <string name="TaptoUploadImage">Tap to Upload Image</string>
    <string name="name">Name</string>
    <string name="CompanyName">Company Name</string>
    <string name="ConfirmPassword">Confirm Password</string>

    <string name="Home">Home</string>
    <string name="ManageRequirements">Manage Requirements</string>
    <string name="MyFavourites">My Favourites</string>
    <string name="SellonB2B">Sell on B2B</string>
    <string name="ShareApp">Share App</string>
    <string name="RateUs">Rate Us</string>
    <string name="PostBuyRequirement">Post Buy Requirement</string>
    <string name="Logout">Logout</string>

    <string name="PostaProducttoBuy.">Post a Product to Buy.</string>
    <string name="EnterProductName">Enter Product Name</string>

    <string name="Tellaboutyourself">Tell about yourself</string>
    <string name="Connectwithclients">Connect with clients</string>
    <string name="Uploadproducts">Upload products</string>
    <string name="PERSONALDETAILS">PERSONAL DETAILS</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="city">City</string>
    <string name="next">Next</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="business_details">BUSINESS DETAILS</string>
    <string name="company_address">Company Address</string>
    <string name="website">Website</string>
    <string name="previous">Previous</string>
    <string name="productdetails">PRODUCT DETAILS</string>
    <string name="product_1">Product 1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
