<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/first" >
        <item android:id="@+id/Home"
            android:title="@string/Home"
            android:icon="@drawable/ic_home_black_24dp"
            />
        <item android:id="@+id/Post"
            android:title="@string/PostBuyRequirement"
            android:icon="@drawable/ic_rate_review_black_24dp"
            />
        <item android:id="@+id/Manage"
            android:title="@string/ManageRequirements"
            android:icon="@drawable/ic_assignment_black_24dp"
            />
        <item android:id="@+id/Fav"
            android:title="@string/MyFavourites"
            android:icon="@drawable/ic_favorite_black_24dp"
            />
        <item android:id="@+id/Sell"
            android:title="@string/SellonB2B"
            android:icon="@drawable/ic_next_week_black_24dp"
            />
    </group>

            <group android:id="@+id/second">


            <item android:id="@+id/Share"
                android:title="@string/ShareApp"
                android:icon="@drawable/ic_share_black_24dp"
                />
            <item android:id="@+id/Rate"
                android:title="@string/RateUs"
                android:icon="@drawable/ic_star_black_24dp"
                />
            <item android:id="@+id/Settings"
                android:title="@string/action_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                />

            <item android:id="@+id/Logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/Logout"

                />
            </group>


</menu>
