<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.flairinfosystems.b2bmarket.fragments.SellFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
        <ImageView
            android:layout_gravity="center"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/accountimg"
            android:id="@+id/img1"
        />
            <TextView
                android:textAlignment="center"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/Tellaboutyourself"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:layout_weight="0.5"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_business_center_black_24dp"
                android:id="@+id/img2"
                />
            <TextView
                android:textAlignment="center"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/Connectwithclients"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:layout_weight="0.5"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_insert_photo_black_24dp"
                android:id="@+id/img3"
                />
            <TextView
                android:textAlignment="center"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/Uploadproducts"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                />
        </LinearLayout>



    </LinearLayout>

<ViewFlipper
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/viewflipper"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/personal_details"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
         android:padding="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/PERSONALDETAILS"
         android:background="@color/cardview_shadow_start_color"
         android:textColor="@color/cardview_dark_background"
         />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >
            <EditText
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mobile_number"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >
            <EditText
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >
            <EditText
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/city"
                />
        </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/next_personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="@dimen/text_regular_margin"
                android:layout_marginRight="@dimen/text_regular_margin"
                android:padding="12dp"
                android:text="@string/next"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/business_details"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business_details"
                android:background="@color/cardview_shadow_start_color"
                android:textColor="@color/cardview_dark_background"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
                <EditText
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/CompanyName"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
                <EditText
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/company_address"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
                <EditText
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/city"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
                <EditText
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/website"
                    />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/previous_business"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="@dimen/text_regular_margin"
                    android:layout_marginRight="@dimen/text_regular_margin"
                    android:padding="12dp"
                    android:text="@string/previous"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    />
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/next_business"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="@dimen/text_regular_margin"
                    android:layout_marginRight="@dimen/text_regular_margin"
                    android:padding="12dp"
                    android:text="@string/next"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/product_details">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:padding="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productdetails"
                android:background="@color/cardview_shadow_start_color"
                android:textColor="@color/cardview_dark_background"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
                <EditText
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/product_1"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
                <EditText
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Product 2"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
                <EditText
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Product 3"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >
                <EditText
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Product 4"
                    />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/previous_product"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="@dimen/text_regular_margin"
                    android:layout_marginRight="@dimen/text_regular_margin"
                    android:padding="12dp"
                    android:text="@string/previous"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    />
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/submit_product"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginLeft="@dimen/text_regular_margin"
                    android:layout_marginRight="@dimen/text_regular_margin"
                    android:padding="12dp"
                    android:text="@string/Submit"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</ViewFlipper>

</LinearLayout>
